# HelloWorldCMake

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt  main.cpp
cmake/modules/: CodeCoverage.cmake  GetGitRevisionDescription.cmake
doc/: CMakeLists.txt  Doxyfile.in  Mainpage.md
lib/: CMakeLists.txt
lib/common/: CMakeLists.txt
lib/common/headers/: version.h  version.h.in
lib/greeter/: CMakeLists.txt
lib/greeter/headers/: greeter.h
lib/greeter/src/: greeter.cpp
lib/repeater/: CMakeLists.txt
lib/repeater/headers/: repeater.h
lib/repeater/src/: repeater.cpp
test/integration/: CMakeLists.txt  main.cpp
test/unit/: CMakeLists.txt  greeter.test.cpp  repeater.test.cpp
